--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ body {
 .section-title {
   margin: 0;
   margin-bottom: 30px;
+  margin-left: 40px;
 }
 
 .btn {
@@ -120,7 +121,7 @@ body {
 }
 
 .header-down--buttons {
-  padding-left: 35px; /*todo: ЭТО НЕ ПРАВИЛЬНО"*/
+  padding-left: 35px;
   border-left: 1px solid #e1e1e1;
 }
 
@@ -164,6 +165,8 @@ body {
   display: flex;
   align-items: flex-end;
   border-radius: 15px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .hotdeal-card-right--wrapper {
@@ -181,12 +184,12 @@ body {
   margin: 0 0 15px 0;
   color: #fff;
   font-size: 40px;
-  line-height: 40px; /*todo: Убрать потом */
+  line-height: 40px; 
 }
 
 .hotdeal-p {
   color: #fff;
-  font-size: 20px; /*todo: Убрать потом */
+  font-size: 20px; 
   line-height: 20px;
   margin-bottom: 47px;
 }
@@ -437,4 +440,246 @@ body {
   background-position: center;
   background-size: cover;
   background-color: black;
+}
+
+/*-----Хочу тур-----*/
+.main-want__tour {
+  min-height: 274px;
+  background-color: #e9e9e9;
+  border-radius: 15px;
+  padding-top: 38px;
+}
+
+.want__tour__container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.want_tour-h2 {
+  margin-left: 40px;
+}
+
+.want__tour-wrapper {
+  width: 1080px;
+  background-color: #fff;
+  border-radius: 15px;
+}
+
+.want__tour-form {
+  min-height: 106px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.form-item {
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid #e1e1e1;
+  padding: 0 20px 0 20px;
+}
+
+.form-item-title {
+  font-size: 12px;
+  line-height: 12px;
+  color: #000000;
+  margin-bottom: 15px;
+}
+
+.select-style {
+  width: 169px;
+  height: 28px;
+  padding: 0 20px 0 7px;
+  border: 0;
+  padding: 0;
+}
+
+.form-date {
+  border: 0;
+  padding: 0;
+  width: 121px;
+}
+
+.input-number-style {
+  min-width: 120px;
+  border: 0;
+  border-bottom: 1px solid #e1e1e1;
+}
+
+.form-date::-webkit-calendar-picker-indicator {
+  margin: 0;
+  padding: 0;
+}
+
+.input-number-style::-webkit-inner-spin-button,
+.input-number-style::-webkit-outer-spin-button {
+  opacity: 1;
+}
+
+.form-btn {
+  padding: 13px 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+/*-----Contacts-----*/
+.main-contacts {
+  margin-bottom: 20px;
+}
+
+.contacts-container {
+  background: #ffffff;
+  border-radius: 15px;
+  height: 618px;
+}
+
+.contacts-content-container {
+  justify-content: space-evenly;
+  align-items: center;
+  height: inherit;
+}
+
+.contacts--content-left {
+  width: 375px;
+  flex-direction: column;
+}
+
+.contacts-item-wrapper {
+  display: flex;
+  border-bottom: 1px solid #c4c4c4;
+}
+
+.contacts-item-wrapper {
+  padding-bottom: 22px;
+  margin-bottom: 25px;
+}
+
+.contacts-item-last {
+  margin-bottom: 45px;
+}
+
+.contacts--descr-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.contacts--title-wrapper {
+  width: 145px;
+}
+
+.contacts--title {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+}
+
+.contacts--descr {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.contacts--link {
+  font-size: 16px;
+  line-height: 150%;
+  color: #cc9933;
+}
+
+.contacts--descr-gray {
+  font-size: 16px;
+  line-height: 150%;
+  color: #999999;
+}
+
+.contacts-btn {
+  padding: 27px 29px;
+}
+
+.contacts--image-right {
+  width: 653px;
+}
+
+/*-----Footer-----*/
+.footer-wrapper {
+  height: 341px;
+  background: #333333;
+  border-radius: 15px;
+  background-position: bottom -3% right 176px;
+  background-repeat: no-repeat;
+  background-image: url(../img/footer-bg.svg);
+}
+
+.footer-container {
+  padding: 45px 52px;
+  flex-wrap: nowrap;
+}
+
+.footer-left {
+  flex-direction: column;
+  justify-content: space-between;
+  height: 250px;
+  max-width: 320px;
+  margin-right: 102px;
+}
+
+.footer-p {
+  margin: 0;
+  font-size: 16px;
+  line-height: 190%;
+  color: #ffffff;
+}
+
+.footer-center {
+  max-width: 360px;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right: 260px;
+}
+
+.footer-address {
+  font-size: 16px;
+  line-height: 190%;
+  color: #ffffff;
+  margin-bottom: 14px;
+}
+
+.footer-center-phones {
+  flex-direction: column;
+  flex-wrap: nowrap;
+  margin-bottom: 15px;
+}
+
+.footer-center-email {
+  flex-wrap: nowrap;
+  flex-direction: column;
+}
+
+.footer-item-link {
+  display: block;
+  width: 25px;
+  height: 25px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.footer-list--item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.link-tripadv {
+  background-image: url(../img/footer-tripadv.svg);
+}
+.link-twitter {
+  background-image: url(../img/footer-twitter.svg);
+}
+.link-fb {
+  background-image: url(../img/footer-fb.svg);
+}
+.link-vk {
+  background-image: url(../img/footer-vk.svg);
+}
+.link-inst {
+  background-image: url(../img/footer-inst.svg);
 }
